feat: Enhanced team code review tool with quick analysis and document intelligence
- Added one-click quick analysis command (team-code-review quick)
- Implemented document intelligence (.document folder scanning)
- Enhanced risk assessment with document-aware analysis
- Added smart optimization suggestions based on project docs
- Improved HTML reports with modern responsive design
- Added comprehensive multi-project configuration examples
- Updated CLI with quick command and auto-setup fallback
- Version bump to 1.1.0 with new features and documentation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "team-code-review-mcp",
-  "version": "1.0.0",
-  "description": "MCP tool for team code review and deep analysis across multiple projects",
+  "version": "1.1.0",
+  "description": "MCP tool for team code review with one-click analysis and document-enhanced intelligence across multiple projects",
   "main": "index.js",
   "type": "module",
   "keywords": [
@@ -11,7 +11,10 @@
     "git",
     "analysis",
     "security",
-    "performance"
+    "performance",
+    "documentation",
+    "quick-analysis",
+    "one-click"
   ],
   "author": "Your Team",
   "license": "MIT",
